# Hermes-Agent-Android

./: PROGRESS.md  README.md  create_pr.py  install-hermes-termux.sh
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ai_chat.cpp  logging.h
app/src/main/kotlin/com/hermes/agent/: HermesApp.kt  MainActivity.kt
app/src/main/kotlin/com/hermes/agent/data/agent/: AutonomousSkillCreator.kt  OrchestratorImpl.kt  SkillMatcher.kt
app/src/main/kotlin/com/hermes/agent/data/backup/: BackupData.kt  GithubBackupService.kt
app/src/main/kotlin/com/hermes/agent/data/llm/: HybridLlmRouter.kt  (+4 more)
app/src/main/kotlin/com/hermes/agent/di/: DatabaseModule.kt  LlmModule.kt  ToolsModule.kt
app/src/main/kotlin/com/hermes/agent/service/: AgentForegroundService.kt  AgentServiceController.kt
app/src/main/kotlin/com/hermes/agent/work/: OtaUpdateWorker.kt  ScheduledTaskWorker.kt  SkillImprovementWorker.kt
app/src/main/res/values/: strings.xml
app/src/test/kotlin/com/hermes/agent/: CloudLlmProviderTest.kt
docs/: ARCHITECTURE.md  GETTING_STARTED.md  MODULES.md  PHASE2.md  PHASE3.md  PHASE4.md
gradle/: libs.versions.toml
hermes agent android/: .gitignore  CONTRIBUTING.md  README.md  settings.gradle.kts
hermes agent android/app/: build.gradle.kts
hermes agent android/app/src/main/: AndroidManifest.xml
hermes agent android/app/src/main/kotlin/com/hermes/agent/: MainActivity.kt
hermes agent android/app/src/main/res/values/: colors.xml
hermes agent android/docs/: BUILD.md  PHASE4.md
hermes agent android/gradle/: libs.versions.toml
(+116 files in other folders)
